feat: added website with multiple pages and styling

--- a/src/gokstad/online-classes/august/class-01/index.html
+++ b/src/gokstad/online-classes/august/class-01/index.html
@@ -6,9 +6,9 @@
     <title>Min første nettside</title>
   </head>
   <body>
-    <h1>Velkommen til min pakkeliste</h1>
+    <h1>Første undervisning - Velkommen og Intro til HTML</h1>
     <h2>Her skal jeg legge til ting jeg skal pakke...</h2>
-    <p>Hei på deg, du kan skrive hva du vil. Dette er bare for å teste.</p>
+    <p>Tid undervisningen skjedde: 20.08.2025</p>
     <ul>
       <li>Tannbørste</li>
       <li>Oreo-kjeks</li>
