--- a/src/gokstad/work-requirement/01/om.html
+++ b/src/gokstad/work-requirement/01/om.html
@@ -25,19 +25,19 @@
         <span></span>
         <span></span>
       </label>
-      <div class="headerRight">
-        <nav class="hamburger">
+      <div class="headerRight hamburger">
+        <nav>
           <a href="./index.html">Hjem</a>
           <a class="active" href="./om.html">Om meg</a>
           <a href="./hobby.html">Hobby</a>
-          <a
-            class="buttonDownload"
-            download
-            href="./public/cv.arthur-leonard-thomassen.pdf"
-          >
-            Last ned CV
-          </a>
         </nav>
+        <a
+          class="buttonDownload"
+          download
+          href="./public/cv.arthur-leonard-thomassen.pdf"
+        >
+          Last ned CV
+        </a>
       </div>
     </header>
     <main>
